adds more boilerplate, sets up data, inits feed

--- a/src/views/_layouts/primary.pug
+++ b/src/views/_layouts/primary.pug
@@ -7,4 +7,4 @@ block body
   include ../_partials/footer.pug
 
 block scripts
-  script(src= SITE_URL + "/js/main.js")
+  script(src= config.SITE_URL + "/js/main.js")
