--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,8 +1,15 @@
-extends ./_layouts/primary.pug
+extends ./_layouts/feed.pug
 
 block variables
 
-block main
-  .Container
-    h2 Hello,
-    p This is a static site, generated with node, gulp, and other shiny things.
+block body
+  .Feed
+    .Feed-item
+      .Feed-item-inner
+    .Feed-item
+      .Feed-item-inner
+    each post in data.posts
+      .Feed-item
+        .Feed-item-inner
+          .Feed-item-content
+            span= post.id
