--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,3 +14,10 @@
 @import "elements.headings";
 @import "elements.text";
 @import "elements.media";
+
+// components
+@import "components.wrapper";
+@import "components.logo";
+@import "components.banner";
+@import "components.button";
+@import "components.social";
