--- a/sass/_elements.headings.scss
+++ b/sass/_elements.headings.scss
@@ -7,7 +7,7 @@ h6 {
   margin: 0;
   padding: 0;
   color: $color-grey-900;
-  font-family: $font-secondary;
+  font-family: $font-primary;
   font-weight: 700;
   line-height: line-height(sm);
 }
