--- a/sass/_components.wrapper.scss
+++ b/sass/_components.wrapper.scss
@@ -1,9 +1,6 @@
-.Wrapper {
-  display: flex;
-  flex-direction: column;
-  overflow: auto;
-  padding: 4rem 0;
-  width: 100vw;
-  height: 100vh;
-  min-height: 60rem;
+.wrapper {
+  display: grid;
+  grid-template-areas:
+    "header header"
+    "about about"
 }
