--- a/sass/_config.variables.scss
+++ b/sass/_config.variables.scss
@@ -16,5 +16,5 @@ $color-grey-500: #9E9E9E;
 $color-grey-700: #616161;
 $color-grey-900: #212121;
 
-$font-primary: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-primary: Quicksand, Helvetica Neue, Helvetica, Arial, sans-serif;
 $font-secondary: Georgia, serif;
