--- a/sass/_elements.text.scss
+++ b/sass/_elements.text.scss
@@ -1,9 +1,18 @@
 a {
-  color: $color-brand-pink;
-  text-decoration: none;
+  color: $color-grey-700;
+  text-decoration: underline;
   transition: color 250ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 a:hover {
-  color: $color-brand-pink-light;
+  color: $color-grey-900;
+}
+
+strong,
+b,
+em,
+i {
+  color: $color-grey-900;
+  font-weight: 700;
+  font-style: normal;
 }
