--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,23 +1,14 @@
-// config
 @import "config.variables";
 @import "config.mixins";
 @import "config.functions";
-
-// vendor
 @import "vendor.normalize";
-
-// generic
 @import "generic.boxsizing";
-
-// elements
 @import "elements.root";
 @import "elements.headings";
 @import "elements.text";
 @import "elements.media";
-
-// components
+@import "objects.layout";
 @import "components.wrapper";
-@import "components.logo";
-@import "components.banner";
-@import "components.button";
-@import "components.social";
+@import "components.header";
+@import "components.footer";
+@import "components.about";
